finish a first pass at A.2

--- a/preamble.tex
+++ b/preamble.tex
@@ -226,6 +226,7 @@
 \DeclareMathOperator{\cofib}{cofib}
 \DeclareMathOperator{\SpH}{SpH}
 \DeclareMathOperator{\Lie}{Lie}
+\DeclareMathOperator{\Frob}{Frob}
 \let\div\undefined\DeclareMathOperator{\div}{div}
 
 % theorem environments
