note about using A.2 in A.3

--- a/powerops.tex
+++ b/powerops.tex
@@ -861,7 +861,9 @@ The case of the orientation $M\String \to \tmf$ has all of the same trappings, b
     \item Analyze the homotopy type of $\widehat L_1 \tmf$ and compare it to that of $KO$.  This lets us use another universal coefficient theorem to lift our description of $KO^* KO$ as $KO^*$--valued measures to $\widehat L_1 \tmf^* KO$ as $\widehat L_1 \tmf^*$--valued measures.
     \item The homotopy type of $\widehat L_2 \tmf$ is ``naively irrelevant'' in the chromatic fracture square: maps $b\Spin \to \widehat L_2 \tmf$ factor through $\widehat L_2 b\Spin = \widehat L_2 KO_p = 0$.
     \item However, the logarithm's presence in the chromatic fracture square $\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf$ has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
-    \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as an understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$.  The case of $E_\infty(M\String, \tmf)$ is similar: one constructs an $A_\infty$ lift of the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$, as well as an understanding of the maps $\pi_* BU[6, \infty) \to \pi_* B\String$ and $\pi_* \tmf \to \pi_* K^{\Tate}$.\todo{I think the conclusion here is that you have to be a $q$--expansion of a modular form (of a particular weight) with constant term a Bernoulli number and every other coefficient integral.  Mike told me that this (or something like this) fully determines these generalized Eisenstein series; that's nice.}
+    \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as an understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$.  The case of $E_\infty(M\String, \tmf)$ is similar: one constructs an $A_\infty$ lift of the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$, as well as an understanding of the maps $\pi_* BU[6, \infty) \to \pi_* B\String$ and $\pi_* \tmf \to \pi_* K^{\Tate}$.
+    \todo{I think the conclusion here is that you have to be a $q$--expansion of a modular form (of a particular weight) with constant term a Bernoulli number and every other coefficient integral.  Mike told me that this (or something like this) fully determines these generalized Eisenstein series; that's nice.}
+    \todo{Mike said that there's some kind of Bousfield--Kuhn argument you can make to use the $H_\infty$ orientation to detect the generalized Eisenstein congruences.  I can't figure out what it would be.}
     \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* \widehat L_1 \tmf$.  These turn out to be normalized Eisenstein series.
 \end{enumerate}
 
