--- a/cooperations.tex
+++ b/cooperations.tex
@@ -5,7 +5,7 @@
 
 In \Cref{StableContextLecture} (and more broadly in \Cref{ChapterFiniteSpectra}), we codified the structure of the stable $E$--cooperations acting on the $E$--homology of a spectrum $X$, attached to it the $E$--Adams spectral sequence which approximates the stable homotopy groups $\pi_* X$, and gave algebro-geometric descriptions of the stable cooperations for some typical spectra: $H\F_2$, $MO$, and $MU$.  We will now pursue a variation on this theme, where we consider the $E$--homology of a \emph{space} rather than of a generic spectrum.  In this Case Study, we will examine the theory of cooperations that arises from this set-up, called the \textit{unstable $E$--cooperations}.  This broader collection of cooperations has considerably more intricate structure than their stable counterparts, requiring the introduction of a new notion of an unstable context.  With that established, we will again find that $E$--homology assigns spaces to quasicoherent Cartesian sheaves over the unstable context, and we will again assemble an \emph{unstable} $E$--Adams spectral sequence approximating the \emph{unstable} homotopy groups of the input space, whose $E^2$--page in favorable situations is tracked by the cohomology of the sheaf over the unstable context.
 
-Remarkably, these unstable contexts also admit algebro-geometric interpretations.  In finding the right language for this, we introduce different subclasses of cooperations (e.g., \textit{additive}), and we are also naturally led to consider \textit{mixed cooperations} (as we did stably in \Cref{OrientationsOnEAndMU}) of the form $F_* \OS{E}{*}$.  The running theme is that when $E$ and $F$ are complex-orientable, there is a natural approximation map \[\Spec Q^* F_* \OS{E}{*} \to \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E)\] which is an isomorphism in every situation of interxest.  However, these isomorphisms do not appear to admit uniform proofs\footnote{The best uniform result I can find is due to Butowiez and Turner~\cite[Theorem 3.12]{ButowiezTurner}.}, so we instead investigate the following cases by hand:
+Remarkably, these unstable contexts also admit algebro-geometric interpretations.  In finding the right language for this, we introduce different subclasses of cooperations (e.g., \textit{additive}), and we are also naturally led to consider \textit{mixed cooperations} (as we did stably in \Cref{OrientationsOnEAndMU}) of the form $F_* \OS{E}{*}$.  The running theme is that when $E$ and $F$ are complex-orientable, there is a natural approximation map \[\Spec Q^* F_* \OS{E}{*} \to \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E)\] which is an isomorphism in every situation of interest.  However, these isomorphisms do not appear to admit uniform proofs\footnote{The best uniform result I can find is due to Butowiez and Turner~\cite[Theorem 3.12]{ButowiezTurner}.}, so we instead investigate the following cases by hand:
 \begin{itemize}
 \item (\Cref{UnstableContextsSection}:) For $F = E = H\F_2$, we compute the full unstable dual Steenrod algebra $H\F_2{}_* \OS{H\F_2}{*}$ by means of iterated bar spectral sequences.  We then pass to the additive unstable cooperations, where we show by hand that this presents the homomorphism scheme $\InternalHom{FormalGroups}(\G_a, \G_a)$.  Finally, we pass to the stable additive cooperations, and we check that our results here are compatible with the isomorphism \[\Spec H\F_2{}_* H\F_2 \cong \InternalAut{\G_a}\] presented in \Cref{SteenrodAlgIdentifiedWithAutGa}.
 \item (\Cref{COableCoopnsII}:) We next consider the case where $E = MU$ and where $F$ is any complex-orientable theory.  We begin with the case $F = H\F_p$, where we can again approach the problem using iterated bar spectral sequences.  The resulting computation is sufficiently nice that we can use this special case of $F = H\F_p$ to deduce the further case of $F = H\Z_{(p)}$, then $F = H\Z$, then $F = MU$, and then finally $F$ any complex-orientable theory.
