--- a/mo.tex
+++ b/mo.tex
@@ -5,7 +5,11 @@
 
 
 
-This Case Study culminates in the calculation of $MO_*(*)$, the bordism ring of unoriented manifolds, but we mainly take this as an opportunity to introduce several key concepts that will serve us throughout the book.  First and foremost, we will require a definition of bordism spectrum that we can manipulate computationally, using just the tools of abstract homotopy theory.  Once that is established, we immediately begin to bring algebraic geometry into the mix: the main idea is that the cohomology ring of a space is better viewed as a scheme (with plenty of extra structure), and the homology groups of a spectrum are better viewed as representation for a certain elaborate algebraic group.  This data actually finds familiar expression in homotopy theory: we show that a form of group cohomology for this representation forms the input to the classical Adams spectral sequence.  Finally, we calculate this representation structure for $H\F_{2*} MO$, find that it is suitably free, and thereby gain control of the Adams spectral sequence computing $MO_*(*)$.\todo{Thread Crefs to the relevant theorems below through this introduction.}
+A simple observation about the bordism ring $MO_*(*)$ (or $MO_*(X)$ more generally, for any space $X$) is that it consists entirely of $2$--torsion: any chain $Z \to X$ can be bulked out to a constant cylinder $Z \times I \to X$, which has as its boundary the chain $2 \cdot (Z \to X)$.  Accordingly, $MO_*(X)$ is always an $\F_2$--vector space.  Our goal in this Case Study is to arrive at two remarkable calculations: first, in \Cref{CalculationOfPiStarMO} we will make an explicit calculation of this $\F_2$--vector space in the case of the bordism homology of a point, and second, in \Cref{MOSplitsIntoHF2s} we will show that there is a natural isomorphism \[MO_*(X) = H\F_2{}_*(X) \otimes_{\F_2} MO_*(*).\]
+
+Our goal in discussing these results in the first Case Study of the book is to take the opportunity to introduce several key concepts that will serve us throughout.  First and foremost, we will require a definition of bordism spectrum that we can manipulate computationally, using just the tools of abstract homotopy theory.  Once that is established, we immediately begin to bring algebraic geometry into the mix: the main idea is that the cohomology ring of a space is better viewed as a scheme (with plenty of extra structure), and the homology groups of a spectrum are better viewed as representation for a certain elaborate algebraic group.  This data actually finds familiar expression in homotopy theory: we show that a form of group cohomology for this representation forms the input to the classical Adams spectral sequence, which classically takes the form \[\Cotor_{\mathcal A_*}^{*, *}(\F_2, H\F_2{}_*(Y)) \Rightarrow \pi_*(Y),\] converging for certain very nice spectra $Y$---including, for instance, $Y = MO$.  In particular, we can bring the tools from the preceding discussion to bear on the homology and cohomology of $MO$, where we make an explicit calculation of its representation structure.  Finding that it is suitably free, we thereby gain control of the Adams spectral sequence, finish the computation, and prove the desired result.
+
+Our \emph{real} goal in this Case Study, however, is to introduce one of the main themes of the entire text: there is some governing algebro-geometric object, the formal group $\RP^\infty_{H\F_2}$, which exerts an extraordinary amount of control over everything in sight.  We will endeavor to rephrase as much of this classical computation as possible so as to highlight its connection to this central object, and we will use this as motivation in future Case Studies to pursue similar objects, which will lead us down much deeper and more rewarding rabbit holes.
 
 
 
